--- a/app/package.json
+++ b/app/package.json
@@ -19,14 +19,15 @@
     "@angular/http": "4.0.0",
     "@angular/platform-browser": "4.0.0",
     "@angular/platform-browser-dynamic": "4.0.0",
-    "@ionic-native/core": "3.4.2",
-    "@ionic-native/firebase": "^3.4.4",
-    "@ionic-native/local-notifications": "^3.4.4",
-    "@ionic-native/splash-screen": "3.4.2",
-    "@ionic-native/status-bar": "3.4.2",
+    "@ionic-native/core": "^3.6.1",
+    "@ionic-native/firebase": "^3.6.1",
+    "@ionic-native/globalization": "^3.6.1",
+    "@ionic-native/local-notifications": "^3.6.1",
+    "@ionic-native/splash-screen": "^3.6.1",
+    "@ionic-native/status-bar": "^3.6.1",
     "@ngx-translate/core": "^6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
-    "angularfire2": "^2.0.0-beta.8",
+    "angularfire2": "2.0.0-beta.8",
     "firebase": "^3.7.5",
     "ionic-angular": "3.0.0",
     "ionicons": "3.0.0",
